Fu Ying/HaiYang | #1320 fix the 'Your Trail Account Phone Number' text overlapped on the Answer the question text

--- a/datawinners/media/css/scss/section_questionnaire_preview.scss
+++ b/datawinners/media/css/scss/section_questionnaire_preview.scss
@@ -205,8 +205,12 @@ p.instructions {
     margin-top: -10px;
   }
 
+  .org-number{
+    position: relative;
+  }
+
   .org_number_link {
-    margin-top: 5px;
+    margin-top: 2px;
     font-size: 12px !important;
     position: absolute;
   }
